# DBAvan-ado

./: Docker.md  README.md
DBase/: ca.pem  connections.py  kafka_ca.crt  kafka_client.crt  kafka_client.key  main.py  pyproject.toml  requirements.txt  s1_api.py  s2_consumer.py  s3_monitor.py  service.cert  service.key  start_services.bat
DBase/static/: styles.css
DBase/templates/: add_song.html  base.html  create_user.html  error.html  home.html  login.html  monitor_dashboard.html  recommendation_submitted.html  request_recommendation.html  spotify_results.html  spotify_search.html  view_song.html  view_user.html
