[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
pymongo = "^4.12.1"
python-dotenv = "^1.1.0"
redis = "^6.1.0"
kafka = "^1.3.5"
psycopg2-binary = "^2.9.10"
requests = "^2.32.3"
uvicorn = "^0.34.2"
fastapi = "^0.115.12"
pydantic = "^2.11.4"
certifi = "^2025.4.26"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"